--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Buynome</title>
 	
 	<!--[CSS]-->
-    <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=1D1Sn10XxuBGpyRqhW2mZxkG7O0HMGhdK">
+    <link rel="stylesheet" href="https://rawcdn.githack.com/spacetoonlinks/hosting/817560b03a5c3915bd5a5ff6727c50d6cd550941/buymystyle.css">
     <!--[CSS]-->
 
     <!--Lazy Load code (website booster)-->  
